leptos_macro/tests/view/15_children_missing.stderr
warning: use of deprecated method `InnerPropsBuilder::<F, ((i32,), (F,), ())>::build`: Missing required field children
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ argument #1 of type `InnerPropsBuilder_Error_Missing_required_field_children` is missing
   |
note: method defined here
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
10 |             <Inner(/* InnerPropsBuilder_Error_Missing_required_field_children */) concrete_i32=42 generic_fun=|| true>
   |                   +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0282]: type annotations needed
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^
   |
help: consider giving `props` an explicit type
   |
10 |             <Inner: /* Type */ concrete_i32=42 generic_fun=|| true>
   |                   ++++++++++++
